--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="m-signature-pad--footer">
       <div class="description">Sign above</div>
       <button class="button clear" data-action="clear">Clear</button>
-      <button class="button submit" data-action="submit">Save</button>
+      <button class="button submit" data-action="submit">Submit</button>
     </div>
   </div>
 
